--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <h1>Choose a pet</h1>
     
-    <form class="container">
+    <form id="pet-form" class="container">
         <div class="row">
             <div class="col">
                 <img src="imgs/dog.jpg" class="img-fluid" alt="Snoopy and Woodstock hugging">
@@ -45,11 +45,11 @@
             <div class="col">
                 <div class="mb-3">
                     <label for="exampleFormControlInput1" class="form-label">Enter a name for you new pet</label>
-                    <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+                    <input type="text" class="form-control" id="pet-name" placeholder="Name">
                 </div>
             </div>
         </div>
-        <button type="button" class="btn btn-outline-primary">Make my new pet!</button>
+        <button type="submit" class="btn btn-primary">Make my new pet!</button>
     </form>
 
     
