--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
     <h1>Choose a pet</h1>
     
-    <form id="pet-form" class="container">
+    <form id="pet-form" class="container" onsubmit="formSubmit">
         <div class="row">
             <div class="col">
                 <img src="imgs/dog.jpg" class="img-fluid" alt="Snoopy and Woodstock hugging">
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="dog-check">
                     <label class="form-check-label" for="flexRadioDefault1">
                         Dog
                     </label>
@@ -25,7 +25,7 @@
             <div class="col">
                 <img src="imgs/cat.webp" class="img-fluid" alt="Kitten rolling on its back">
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="cat-check">
                     <label class="form-check-label" for="flexRadioDefault1">
                         Cat
                     </label>
@@ -34,7 +34,7 @@
             <div class="col">
                 <img src="imgs/bird.jpg" class="img-fluid" alt="Brightly colored Toucan">
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+                    <input class="form-check-input" type="radio" name="flexRadioDefault" id="bird-check">
                     <label class="form-check-label" for="flexRadioDefault1">
                         Bird
                     </label>
